@startuml
namespace main {
    class ClusterClientAdapter << (S,Aquamarine) >> {
        - clusterClient *redis.ClusterClient

        + Set(ctx context.Context, key string, value <font color=blue>interface</font>{}, expiration time.Duration) error
        + Get(ctx context.Context, key string) (string, error)

    }
    interface RedisClient  {
        + Set(ctx context.Context, key string, value <font color=blue>interface</font>{}, expiration time.Duration) error
        + Get(ctx context.Context, key string) (string, error)

    }
    class StandardClientAdapter << (S,Aquamarine) >> {
        - client *redis.Client

        + Set(ctx context.Context, key string, value <font color=blue>interface</font>{}, expiration time.Duration) error
        + Get(ctx context.Context, key string) (string, error)

    }
}

"main.RedisClient" <|-- "main.ClusterClientAdapter"
"main.RedisClient" <|-- "main.StandardClientAdapter"

@enduml